--- a/testdata/daily/2025-02-01.md
+++ b/testdata/daily/2025-02-01.md
@@ -14,12 +14,12 @@ Reviewed [[projects/website]] progress. Looking good.
 
 Discussed Q2 priorities.
 
-- @task(due=2025-02-03) Follow up on timeline
+- @due(2025-02-03) Follow up on timeline
 - [[people/alice]] will send updated estimates
 
 ## Afternoon
 
-- @task(due=2025-02-02, priority=high) Review PR #1234
+- @due(2025-02-02) @priority(high) Review PR #1234
 - @remind(2025-02-02T14:00) Call with vendor
 
 ## Reading
