--- a/testdata/daily/2025-02-01.md
+++ b/testdata/daily/2025-02-01.md
@@ -19,7 +19,7 @@ Discussed Q2 priorities.
 
 ## Afternoon
 
-- @due(2025-02-02) @priority(high) Review PR #1234
+- @due(2025-02-02) @priority(high) Review PR #1234 #important
 - @remind(2025-02-02T14:00) Call with vendor
 
 ## Reading
