--- a/testdata/daily/2025-02-01.md
+++ b/testdata/daily/2025-02-01.md
@@ -7,15 +7,15 @@ tags: [work]
 
 ## Morning
 
-Reviewed [[projects/website]] progress. Looking good.
+Reviewed [[projects/bifrost]] progress. Looking good.
 
 ## Weekly Standup
-::meeting(id=standup, time=09:00, attendees=[[[people/alice]], [[people/bob]]])
+::meeting(id=standup, time=09:00, attendees=[[[people/freya]], [[people/thor]]])
 
 Discussed Q2 priorities.
 
 - @due(2025-02-03) Follow up on timeline
-- [[people/alice]] will send updated estimates
+- [[people/freya]] will send updated estimates
 
 ## Afternoon
 
