revamp query system

--- a/testdata/daily/2025-02-01.md
+++ b/testdata/daily/2025-02-01.md
@@ -1,6 +1,5 @@
 ---
 type: date
-tags: [work]
 ---
 
 # Saturday, February 1, 2025
@@ -24,6 +23,6 @@ Discussed Q2 priorities.
 
 ## Reading
 
-Chapter 2 of [[books/atomic-habits]].
+Chapter 2 of [[books/erta-edda]].
 
-- @highlight Small habits compound over time #productivity
+- @highlight The world tree Yggdrasil connects all nine realms #mythology
